//  Copyright 2022 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sealed.wasm.tests;

service ServeDecryptService {
  // Decrypts a ciphertext encrypted to job key.
  rpc Decrypt(DecryptRequest) returns (DecryptResponse) {}
  // Encrypt a plaintext to job key.
  rpc Encrypt(EncryptRequest) returns (EncryptResponse) {}
  // Call SC_PANIC with given message.
  rpc Panic(PanicRequest) returns (PanicResponse) {}
}

message DecryptRequest {
  string ciphertext = 1;
}

message DecryptResponse {
  string plaintext = 1;
}

message EncryptRequest {
  string plaintext = 1;
}

message EncryptResponse {
  string ciphertext = 1;
}

message PanicRequest {
  string error_message = 1;
}

message PanicResponse {
  // TODO(b/223244303): remove this.
  string unused = 1;
}
