//  Copyright 2022 Google LLC.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package sealed.wasm.tests;

service ServePanic {
  // Reverses a string.
  rpc Reverse(ReverseRequest) returns (ReverseResponse) {}
  // Returns an error.
  rpc Error(ReverseRequest) returns (ReverseResponse) {}
  // Calls SC_PANIC.
  rpc Panic(ReverseRequest) returns (ReverseResponse) {}
  // Calls Reverse on some other sealed task.
  // Used to test outbound calls made by the enforcer.
  rpc ReverseOuter(ReverseRequest) returns (ReverseResponse) {}
  // Calls Error on some other sealed task.
  // Used to test outbound calls made by the enforcer.
  rpc ErrorOuter(ReverseRequest) returns (ReverseResponse) {}
}

message ReverseRequest {
  string text = 1;
}

message ReverseResponse {
  string text = 1;
}
